--- a/src/components/Root/FeaturedMerchants/style.css
+++ b/src/components/Root/FeaturedMerchants/style.css
@@ -13,7 +13,8 @@
   text-transform: capitalize;
   font-weight:500;
   font-size: 18px;
-  padding: 0 0 1em;
+  padding: 0;
+  margin: 0
 
 }
 
@@ -26,5 +27,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 0 0 2em;
+  padding: 2em 0;
+  list-style: none
 }
