--- a/src/components/OfferBox/FeaturedOffer/style.css
+++ b/src/components/OfferBox/FeaturedOffer/style.css
@@ -33,6 +33,7 @@
   width: 60px;
   height: 60px;
   box-shadow: 0px 0px 10px #cf8ce8;
+  background-color: #FF2882;
   bottom: 0;
   left: 50%;
   -ms-transform: translateX(-50%) translateY(50%);
