--- a/src/components/Root/FeaturedOffers/style.css
+++ b/src/components/Root/FeaturedOffers/style.css
@@ -16,7 +16,8 @@ section .featured-offers {
   flex-wrap: nowrap;
   flex-direction: row;
   overflow-x:auto;
-  padding: 1em 0 2em;
+  padding: 2em 0;
+  margin: 0;
 
   scroll-snap-type: x mandatory;
 
