--- a/global.css
+++ b/global.css
@@ -1,35 +1,65 @@
+body,
+section {
+  padding: 0;
+  margin: 0;
+  transition-property: all;
+  transition-duration: .3s;
+  font-family: sofia-pro-soft, sans-serif;
+  background-color: #f4f4f4;
+
+}
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+.spacer {
+  display: block;
+  height: 3em;
+  background: transparent;
+}
+
+.separator {
+  border-top: 1px solid #eeeeee;
+  height: 1px;
+  margin: 1.5rem 0;
+}
+
+.button {
+  background-color: #ff2882;
+  padding: 1em;
+  margin: 10px;
+  color: white;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
+
+
+
+.button.fuchsia {
+  background-color: #ff2882;
+}
+
+.button.indigo {
+  background-color: #140f2b;
+}
+
+.button::after {
+  content: ' ';
+  background-image: url("./src/assets/arrow-pointing-to-right.svg");
+  background-size: cover;
+  width: 12px;
+  height: 8px;
+}
+
+
 /* Small screens - MOBILE */
 @media only screen {
-  .featured-offers {
+  .container {
     display: flex;
-    justify-content: center;
-    background: #f4f4f4 0% 0% no-repeat padding-box;
-  }
-
-  .featured-offers .container {
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    max-width: 100%
-  }
-
-  .featured-offer-header {
-    font-weight: 500;
-    font-size: 18px;
-
-    color: #37003c;
-  }
-
-  .featured-offers-list {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    overflow-x: scroll;
-    padding: 2em 0;
-    margin: 0;
-
-    scroll-snap-type: x mandatory;
+    font-family: sofia-pro-soft, sans-serif;
+    width: 100%;
   }
 } /* Define mobile styles - Mobile First */
 
@@ -45,6 +75,10 @@
 
 /* Large screens - DESKTOP */
 @media only screen and (min-width: 64.063em) {
+  .container {
+    width: 80%;
+    max-width: 1440px;
+  }
 } /* min-width 1025px, large screens */
 
 @media only screen and (min-width: 64.063em) and (max-width: 90em) {
@@ -52,6 +86,11 @@
 
 /* XLarge screens */
 @media only screen and (min-width: 90.063em) {
+
+    .container {
+      }
+    
+
 } /* min-width 1441px, xlarge screens */
 
 @media only screen and (min-width: 90.063em) and (max-width: 120em) {
