--- a/src/components/OfferBox/FeaturedOffer/style.css
+++ b/src/components/OfferBox/FeaturedOffer/style.css
@@ -13,8 +13,8 @@
   background: #fff;
   filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.1));
   border-radius: 10px;
-  margin-bottom: 1em;
-  margin-right: 1em;
+
+  margin: 1em;
 
   scroll-snap-align: center;
 }
@@ -63,11 +63,10 @@
 }
 
 .button-redeem {
-  position: absolute;
   border-radius: 50%;
   background: url('../../../assets/arrow_right.svg') no-repeat center, linear-gradient(to right, #ff2882, #ff2882);
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 
   right: -0.5em;
   bottom: 1em;
