--- a/src/templates/MerchantPage/merchantPage.css
+++ b/src/templates/MerchantPage/merchantPage.css
@@ -11,11 +11,28 @@
     flex-direction: column;
   }
 
-  ul {
+  .offers-list {
     list-style: none;
     margin: 0;
     padding: 1em;
-    flex: 1
+    flex: 1;
+  }
+
+  .all-offers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin: 1em 0
+  }
+
+  .header-right {
+    align-self: flex-end;
+  }
+
+  .all-offers.header-left {
+    text-align: left;
+    color: #37003c;
   }
 } /* Define mobile styles - Mobile First */
 
