--- a/src/components/MerchantPage/Hero/style.css
+++ b/src/components/MerchantPage/Hero/style.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 2em 0 0 0;
   }
 
   .merchant-hero .container {
@@ -17,7 +18,6 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 2em 0em;
   }
 
   .merchant-hero-logo {
@@ -174,6 +174,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    padding: 3em 0 0 0;
+
   }
 
   .merchant-hero-logo {
