--- a/src/components/Layout/Footer/style.css
+++ b/src/components/Layout/Footer/style.css
@@ -2,6 +2,7 @@
 
 .footer {
   display: flex;
+  align-self: flex-end;
   flex-direction: column;
   justify-content: center;
   align-items: center;
