--- a/global.css
+++ b/global.css
@@ -35,8 +35,6 @@ section {
   text-transform: uppercase;
 }
 
-
-
 .button.fuchsia {
   background-color: #ff2882;
 }
@@ -51,6 +49,11 @@ section {
   background-size: cover;
   width: 12px;
   height: 8px;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
 }
 
 
