--- a/src/components/Layout/Footer/style.css
+++ b/src/components/Layout/Footer/style.css
@@ -2,13 +2,12 @@
 
 .footer {
   display: flex;
-  align-self: flex-end;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: white;
   height: 300px;
-
+  width: 100%;
  }
 
 
