--- a/src/components/MerchantPage/MerchantDescription/style.css
+++ b/src/components/MerchantPage/MerchantDescription/style.css
@@ -5,7 +5,8 @@
     order: 2;
     background: white;
     padding: 2em;
-    border-radius: 5px
+    border-radius: 5px;
+    min-height: 400px
   }
 
   .merchant-description-content h1 {
