--- a/src/templates/MerchantPage/merchantPage.css
+++ b/src/templates/MerchantPage/merchantPage.css
@@ -20,10 +20,16 @@
 
   .all-offers {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    margin: 1em 0
+    margin: 1em 0;
+  }
+
+  .offer-headers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .header-right {
