--- a/src/components/MerchantPage/MainOfferBox/style.css
+++ b/src/components/MerchantPage/MainOfferBox/style.css
@@ -81,6 +81,10 @@
     z-index: 3;
   }
 
+  .main-offer-box-button {
+    margin-right: 5%
+  }
+
 
 } /* Define mobile styles - Mobile First */
 
@@ -130,9 +134,6 @@
     text-align: left;
   }
 
-  .main-offer-box-button {
-    margin-right: 1em
-  }
 
   .main-offer-type {
     text-align: left;
