--- a/src/components/MerchantPage/MerchantDescription/style.css
+++ b/src/components/MerchantPage/MerchantDescription/style.css
@@ -15,6 +15,11 @@
     color: #140f2b;
   }
 
+  .merchant-description-content p {
+    font-weight: 300;
+    color: #707070
+  }
+
   .merchant-description-content .title-small {
     margin: 1em 0;
   }
