--- a/src/components/MerchantPage/MerchantDescription/style.css
+++ b/src/components/MerchantPage/MerchantDescription/style.css
@@ -57,7 +57,8 @@
 /* XLarge screens */
 @media only screen and (min-width: 90.063em) {
   .merchant-description-content {
-    width: 360px;
+    width: 280px;
+    height: auto
   }
 } /* min-width 1441px, xlarge screens */
 
