merchant hero: mascot svged

--- a/src/components/MerchantPage/Hero/style.css
+++ b/src/components/MerchantPage/Hero/style.css
@@ -179,7 +179,7 @@
   .merchant-hero .container {
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
   }
 
   .merchant-left-content {
