--- a/src/components/MerchantPage/MainOfferBox/style.css
+++ b/src/components/MerchantPage/MainOfferBox/style.css
@@ -8,6 +8,10 @@
     cursor: pointer;
   }
 
+  .main-offer-box .redeem-link {
+    flex-direction: column;
+  }
+
   .main-offer-box-top {
     display: flex;
     justify-content: center;
@@ -90,6 +94,10 @@
 
 /* Medium screens - TABLET */
 @media only screen and (min-width: 40.063em) {
+  .main-offer-box .redeem-link {
+    flex-direction: row;
+  }
+
   .exclusive-badge {
     top: auto;
     right: -40px;
@@ -98,11 +106,12 @@
     height: 80px;
     transform: scale(1);
 
--webkit-transition: all 250ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
--webkit-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
-   -moz-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
-     -o-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
-        transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */  }
+    -webkit-transition: all 250ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
+    -webkit-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+    -moz-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+    -o-transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+    transition: all 250ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
+  }
 
   .main-offer-box {
     display: flex;
@@ -128,7 +137,6 @@
     -webkit-transition: width 0.2s; /* Safari prior 6.1 */
     transition: width 0.2s;
   }
-
 
   .main-offer-box-top span {
     display: none;
