Code Modal Completed

--- a/src/components/common/Modal/style.css
+++ b/src/components/common/Modal/style.css
@@ -1,4 +1,8 @@
-.modal-container {
+
+
+  /* Small screens - MOBILE */
+@media only screen {
+  .modal-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,7 +20,7 @@
   }
   
   .modal-open {
-    position: absolute;
+    position: fixed;
     top: 30%;
     background-color: white;
     z-index: 2;
@@ -36,3 +40,23 @@
     color: goldenrod;
   }
   
+} /* Define mobile styles - Mobile First */
+
+/* Medium screens - TABLET */
+@media only screen and (min-width: 40.063em) {
+} /* min-width 641px, medium screens */
+
+/* Large screens - DESKTOP */
+@media only screen and (min-width: 64.063em) {
+  .modal-open {
+    max-width: 450px;
+  }
+} /* min-width 1025px, large screens */
+
+/* XLarge screens */
+@media only screen and (min-width: 90.063em) {
+} /* min-width 1441px, xlarge screens */
+
+/* XXLarge screens */
+@media only screen and (min-width: 120.063em) {
+} /* min-width 1921px, xlarge screens */
