--- a/src/components/common/Modal/style.css
+++ b/src/components/common/Modal/style.css
@@ -20,8 +20,12 @@
   }
   
   .modal-open {
+
     position: fixed;
-    top: 30%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
     background-color: white;
     z-index: 2;
     border-radius: 10px;
