--- a/src/components/MerchantPage/SmallOfferBox/smallOfferBox.css
+++ b/src/components/MerchantPage/SmallOfferBox/smallOfferBox.css
@@ -6,7 +6,7 @@
     height: 90px;
     width: 100%;
     margin: 0 0 1em;
-    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.1));
 
     -webkit-transition: all 300ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
     -webkit-transition: all 300ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
@@ -16,7 +16,7 @@
   }
 
   .small-offer-box:hover {
-    filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.2));
+    filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.2));
     cursor: pointer;
   }
 
@@ -26,6 +26,9 @@
   }
 
   .small-box-left {
+    border-top: rgba(128, 128, 128, 0.479) 1px solid;
+    border-left: rgba(128, 128, 128, 0.479) 1px solid;
+    border-bottom: rgba(128, 128, 128, 0.479) 1px solid;
     border-radius: 10px 0px 0px 10px;
     background-image: linear-gradient(to right, #140f2b 0%, #281853 100%);
     background-size: 200% auto;
@@ -52,6 +55,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: rgba(128, 128, 128, 0.479) 1px solid;
+    border-right: rgba(128, 128, 128, 0.479) 1px solid;
+    border-bottom: rgba(128, 128, 128, 0.479) 1px solid;
+
     border-radius: 0 10px 10px 0;
     background: white;
     color: #281853;
